move gdm to own notebook

--- a/landcape_genomic_analysis.ipynb
+++ b/landcape_genomic_analysis.ipynb
@@ -588,198 +588,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#gdm with fst as genetic distance matrix\n",
-    "site=as.integer(fst_pop_names)\n",
-    "\n",
-    "#format population info\n",
-    "#popenv=cbind(site,populations[,c(19:20,26:ncol(populations))])\n",
-    "popenv=cbind(site,populations[,c(19:20,26:44)])  #just 19 bioclim vars\n",
-    "\n",
-    "#format and scale fst matrix\n",
-    "#shift to get rid of negative values\n",
-    "shift=min(fst.dist)\n",
-    "fst.dist.tx=fst.dist-shift\n",
-    "#divide by max to scale 0-1\n",
-    "scale=max(fst.dist.tx)\n",
-    "fst.dist.tx=fst.dist.tx/scale\n",
-    "print(min(fst.dist.tx))\n",
-    "print(max(fst.dist.tx))\n",
-    "#rescale distances\n",
-    "#unscaleddist=(scaleddist*scale)+shift\n",
-    "\n",
-    "#format for gdm input\n",
-    "fst.dist.m=as.matrix(fst.dist.tx)\n",
-    "gdmDissim=data.frame(site,fst.dist.m)\n",
-    "gdmTab.dis=formatsitepair(gdmDissim, bioFormat=3, XColumn=\"Longitude\", YColumn=\"Latitude\",\n",
-    "                             predData=popenv, siteColumn=\"site\")\n",
-    "\n",
-    "#run GDM\n",
-    "gdm.1=gdm(gdmTab.dis, geo=T)\n",
-    "print(summary(gdm.1))\n",
-    "plot(gdm.1, plot.layout=c(2,2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# make figures\n",
-    "\n",
-    "par(mfrow=c(2,2))\n",
-    "\n",
-    "#enviro vs genetic dist\n",
-    "plot(gdm.1$ecological,gdm.1$observed, col=\"grey40\",pch=20,\n",
-    "        xlab=\"Predicted Environmental Distance\", ylab=\"Observed Genetic Distance\")\n",
-    "#plot(mean(gdm.1.splineDat$x),mean(gdm.1.splineDat$y))\n",
-    "#plot(rowMeans(gdm.1.splineDat$x),rowMeans(gdm.1.splineDat$y))\n",
-    "#gdm.1.splineDat <- isplineExtract(gdm.1)\n",
-    "#plot(gdm.1.splineDat$x[,\"Geographic\"], gdm.1.splineDat$y[,\"Geographic\"], lwd=3,\n",
-    "#   type=\"l\", xlab=\"Geographic distance\", ylab=\"Partial environmental distance\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#predict (this uses the model to predict the current sites based on the model)\n",
-    "gdm.1.pred <- predict(gdm.1, gdmTab.dis)\n",
-    "plot(gdmTab.dis$distance, gdm.1.pred, xlab=\"Observed dissimilarity\",\n",
-    "     ylab=\"Predicted dissimilarity\", xlim=c(0,1), ylim=c(0,1), pch=20, col=rgb(0,0,1,0.5))\n",
-    "lines(c(-1,2), c(-1,2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#prediction in space\n",
-    "\n",
-    "# transform climate rasters & plot pattern\n",
-    "rastTrans <- gdm.transform(gdm.1, subset(clim_vars_range,c(1:19)))\n",
-    "#plot(rastTrans)\n",
-    "\n",
-    "rastDat <- na.omit(getValues(rastTrans))\n",
-    "#rastDat <- sampleRandom(rastTrans, 50000) # can use if rasters are large\n",
-    "pcaSamp <- prcomp(rastDat)\n",
-    "# note the use of the 'index' argument\n",
-    "pcaRast <- predict(rastTrans, pcaSamp, index=1:3)\n",
-    "# scale rasters\n",
-    "pcaRast[[1]] <- (pcaRast[[1]]-pcaRast[[1]]@data@min) /\n",
-    "(pcaRast[[1]]@data@max-pcaRast[[1]]@data@min)*255\n",
-    "pcaRast[[2]] <- (pcaRast[[2]]-pcaRast[[2]]@data@min) /\n",
-    "(pcaRast[[2]]@data@max-pcaRast[[2]]@data@min)*255\n",
-    "pcaRast[[3]] <- (pcaRast[[3]]-pcaRast[[3]]@data@min) /\n",
-    "(pcaRast[[3]]@data@max-pcaRast[[3]]@data@min)*255\n",
-    "\n",
-    "#pdf(\"emellb_gdm_space.pdf\")\n",
-    "plotRGB(pcaRast, r=1, g=2, b=3)\n",
-    "text(samples$Longitude,samples$Latitude, \n",
-    "     label=substring(samples$PopulationName, 4), cex = .6)#, col=samples$cov_color) #add names and colors\n",
-    "#dev.off()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "## prediction in future ##\n",
-    "#formatting\n",
-    "#add climate zones, etc to future since don't have predictions for those\n",
-    "#bc50mc85=stack(bc50mc85,subset(clim_vars_range,20:22))\n",
-    "#bc70mc85=stack(bc70mc85,subset(clim_vars_range,20:22))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#prediction in future space\n",
-    "\n",
-    "# transform climate rasters & plot pattern\n",
-    "rastTrans <- gdm.transform(gdm.1, bc70mc85)\n",
-    "#plot(rastTrans)\n",
-    "\n",
-    "rastDat <- na.omit(getValues(rastTrans))\n",
-    "#rastDat <- sampleRandom(rastTrans, 50000) # can use if rasters are large\n",
-    "pcaSamp <- prcomp(rastDat)\n",
-    "# note the use of the 'index' argument\n",
-    "pcaRast <- predict(rastTrans, pcaSamp, index=1:3)\n",
-    "# scale rasters\n",
-    "pcaRast[[1]] <- (pcaRast[[1]]-pcaRast[[1]]@data@min) /\n",
-    "(pcaRast[[1]]@data@max-pcaRast[[1]]@data@min)*255\n",
-    "pcaRast[[2]] <- (pcaRast[[2]]-pcaRast[[2]]@data@min) /\n",
-    "(pcaRast[[2]]@data@max-pcaRast[[2]]@data@min)*255\n",
-    "pcaRast[[3]] <- (pcaRast[[3]]-pcaRast[[3]]@data@min) /\n",
-    "(pcaRast[[3]]@data@max-pcaRast[[3]]@data@min)*255\n",
-    "\n",
-    "#pdf(\"emellb_gdm_future_space.pdf\")\n",
-    "plotRGB(pcaRast, r=1, g=2, b=3)\n",
-    "text(samples$Longitude,samples$Latitude, \n",
-    "     label=substring(samples$PopulationName, 4), cex = .6)#, col=samples$cov_color) #add names and colors\n",
-    "#dev.off()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "## prediction in time ##\n",
-    "\n",
-    "#2050\n",
-    "#pdf(\"gdm_2050.pdf\")\n",
-    "timePred <- predict(gdm.1, subset(clim_vars_range,c(1:19)), time=T, predRasts=bc50mc85)\n",
-    "#hist(timePred$values)\n",
-    "timePred[timePred>1]=NA\n",
-    "plot(timePred)\n",
-    "text(samples$Longitude,samples$Latitude, \n",
-    "     label=substring(samples$PopulationName, 4), cex = .6)#, col=samples$cov_color) #add names and colors\n",
-    "#dev.off()\n",
-    "\n",
-    "#2070\n",
-    "#pdf(\"gdm_2070.pdf\")\n",
-    "timePred <- predict(gdm.1, subset(clim_vars_range,c(1:19)), time=T, predRasts=bc70mc85)\n",
-    "#hist(timePred$values)\n",
-    "timePred[timePred>1]=NA\n",
-    "plot(timePred)\n",
-    "text(samples$Longitude,samples$Latitude, \n",
-    "     label=substring(samples$PopulationName, 4), cex = .6)#, col=samples$cov_color) #add names and colors\n",
-    "#dev.off()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -795,9 +603,9 @@
    "outputs": [],
    "source": [
     "#identify \"clones\" for removal for individual based gdm analysis\n",
-    "x=hclust(genos.dist)\n",
+    "#x=hclust(genos.dist)\n",
     "#pdf(\"sample_dend.pdf\", width=20, height=6)\n",
-    "plot(x,cex=.5)\n",
+    "#plot(x,cex=.5)\n",
     "#dev.off()"
    ]
   },
@@ -810,112 +618,23 @@
    "outputs": [],
    "source": [
     "#remove clones\n",
-    "genos.dist.noclones=as.matrix(genos.dist)\n",
-    "which(colnames(genos.dist.noclones)==\"S45174\")\n",
-    "which(colnames(genos.dist.noclones)==\"S45255\")\n",
-    "which(colnames(genos.dist.noclones)==\"S45304\")\n",
-    "which(colnames(genos.dist.noclones)==\"S45180\")\n",
-    "which(colnames(genos.dist.noclones)==\"S45184\")\n",
-    "which(colnames(genos.dist.noclones)==\"S45181\")\n",
-    "which(colnames(genos.dist.noclones)==\"S45183\")\n",
-    "which(colnames(genos.dist.noclones)==\"S45083\")\n",
-    "which(colnames(genos.dist.noclones)==\"S45024\")\n",
-    "ind=c(135,197,232,140,143,141,142,67,21)\n",
-    "genos.dist.noclones=genos.dist.noclones[-ind,-ind]\n",
-    "genos.dist.noclones=dist(genos.dist.noclones)\n",
+    "#genos.dist.noclones=as.matrix(genos.dist)\n",
+    "#which(colnames(genos.dist.noclones)==\"S45174\")\n",
+    "#which(colnames(genos.dist.noclones)==\"S45255\")\n",
+    "#which(colnames(genos.dist.noclones)==\"S45304\")\n",
+    "#which(colnames(genos.dist.noclones)==\"S45180\")\n",
+    "#which(colnames(genos.dist.noclones)==\"S45184\")\n",
+    "#which(colnames(genos.dist.noclones)==\"S45181\")\n",
+    "#which(colnames(genos.dist.noclones)==\"S45183\")\n",
+    "#which(colnames(genos.dist.noclones)==\"S45083\")\n",
+    "#which(colnames(genos.dist.noclones)==\"S45024\")\n",
+    "#ind=c(135,197,232,140,143,141,142,67,21)\n",
+    "#genos.dist.noclones=genos.dist.noclones[-ind,-ind]\n",
+    "#genos.dist.noclones=dist(genos.dist.noclones)\n",
     "\n",
-    "samples.noclones=subset(samples, SampleID!=\"S45174\" & SampleID!=\"S45255\" & SampleID!=\"S45304\"\n",
-    "                        & SampleID!=\"S45180\" & SampleID!=\"S45184\" & SampleID!=\"S45181\" & SampleID!=\"S45183\"\n",
-    "                        & SampleID!=\"S45083\" & SampleID!=\"S45024\" )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "##gdm with individual genetic distance matrix\n",
-    "site=as.integer(samples.noclones$SampleName)\n",
-    "\n",
-    "#format population info\n",
-    "sampleenv=cbind(site,samples.noclones[,c(19:20,26:ncol(populations))])\n",
-    "\n",
-    "#format and scale distance matrix\n",
-    "#shift to get rid of negative values\n",
-    "shift=min(genos.dist.noclones)\n",
-    "genos.dist.tx=genos.dist.noclones-shift\n",
-    "#divide by max to scale 0-1\n",
-    "scale=max(genos.dist.tx)\n",
-    "genos.dist.tx=genos.dist.tx/scale\n",
-    "print(min(genos.dist.tx))\n",
-    "print(max(genos.dist.tx))\n",
-    "#rescale distances\n",
-    "#unscaleddist=(scaleddist*scale)+shift\n",
-    "genos.dist.m=as.matrix(genos.dist.tx)\n",
-    "gdmDissim=data.frame(site,genos.dist.m)\n",
-    "gdmTab.dis=formatsitepair(gdmDissim, bioFormat=3, XColumn=\"Longitude\", YColumn=\"Latitude\",\n",
-    "                             predData=sampleenv, siteColumn=\"site\")\n",
-    "#run GDM\n",
-    "gdm.1=gdm(gdmTab.dis, geo=T)\n",
-    "#summary(gdm.1)\n",
-    "#str(gdm.1)\n",
-    "plot(gdm.1, plot.layout=c(2,2))\n",
-    "gdm.1.splineDat <- isplineExtract(gdm.1)\n",
-    "#str(gdm.1.splineDat)\n",
-    "plot(gdm.1.splineDat$x[,\"Geographic\"], gdm.1.splineDat$y[,\"Geographic\"], lwd=3,\n",
-    "     type=\"l\", xlab=\"Geographic distance\", ylab=\"Partial ecological distance\")\n",
-    "\n",
-    "gdm.1.pred <- predict(gdm.1, gdmTab.dis)\n",
-    "plot(gdmTab.dis$distance, gdm.1.pred, xlab=\"Observed dissimilarity\",\n",
-    "     ylab=\"Predicted dissimilarity\", xlim=c(0,1), ylim=c(0,1), pch=20, col=rgb(0,0,1,0.5))\n",
-    "lines(c(-1,2), c(-1,2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "## GDM with allele abundance by population ##\n",
-    "\n",
-    "#read in allele abundance data (sites x allele)\n",
-    "sitealleles=read.delim(paste(infilepath,siteallelematrix,sep=\"\"), sep=\",\", header=F)     #read in file\n",
-    "colnames(sitealleles)[1]=\"PopulationName\"\n",
-    "colnames(sitealleles)[2]=\"Longitude\"\n",
-    "colnames(sitealleles)[3]=\"Latitude\"\n",
-    "#sitealleles[1:5,1:10]\n",
-    "\n",
-    "#enviro data\n",
-    "siteenviro=populations[,c(19:21,26:ncol(populations))]\n",
-    "\n",
-    "#format data\n",
-    "gdmTab=formatsitepair(sitealleles, bioFormat=1, XColumn=\"Longitude\", YColumn=\"Latitude\", siteColumn=\"PopulationName\",\n",
-    "                     predData=siteenviro, abundance=T, weightType=\"richness\")\n",
-    "#scale distance to 0-1\n",
-    "gdmTab$distance=gdmTab$distance-min(gdmTab$distance)\n",
-    "gdmTab$distance=gdmTab$distance/max(gdmTab$distance)\n",
-    "\n",
-    "#run GDM\n",
-    "gdm.1=gdm(gdmTab, geo=T)\n",
-    "#summary(gdm.1)\n",
-    "#str(gdm.1)\n",
-    "length(gdm.1$predictors) # get idea of number of panels\n",
-    "plot(gdm.1, plot.layout=c(2,2))\n",
-    "gdm.1.splineDat <- isplineExtract(gdm.1)\n",
-    "#str(gdm.1.splineDat)\n",
-    "plot(gdm.1.splineDat$x[,\"Geographic\"], gdm.1.splineDat$y[,\"Geographic\"], lwd=3,\n",
-    "     type=\"l\", xlab=\"Geographic distance\", ylab=\"Partial ecological distance\")\n",
-    "\n",
-    "gdm.1.pred <- predict(gdm.1, gdmTab)\n",
-    "plot(gdmTab$distance, gdm.1.pred, xlab=\"Observed dissimilarity\",\n",
-    "     ylab=\"Predicted dissimilarity\", xlim=c(0,1), ylim=c(0,1), pch=20, col=rgb(0,0,1,0.5))\n",
-    "lines(c(-1,2), c(-1,2))"
+    "#samples.noclones=subset(samples, SampleID!=\"S45174\" & SampleID!=\"S45255\" & SampleID!=\"S45304\"\n",
+    "#                        & SampleID!=\"S45180\" & SampleID!=\"S45184\" & SampleID!=\"S45181\" & SampleID!=\"S45183\"\n",
+    "#                        & SampleID!=\"S45083\" & SampleID!=\"S45024\" )"
    ]
   }
  ],
